--- a/notebooks/sympy.ipynb
+++ b/notebooks/sympy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -19,11 +19,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x**l*xdot**(m - 1)*(0.3*x + 0.6*xdot)\n",
+      "(0.3*x**(l + 1)*xdot**(m - 1), 0.6*x**l*xdot**m)\n"
+     ]
+    }
+   ],
    "source": [
     "[ x, xdot ] = symbols('x xdot')\n",
     "l, m = symbols('l m',real=True)\n",
@@ -38,11 +47,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.3*u + 0.6*udot\n",
+      "(0.3*u**(l + 1)*udot**(m - 1), 0.6*u**l*udot**m)\n",
+      "[0.3*u**(l + 1)*udot**(m - 1), 0.6*u**l*udot**m]\n"
+     ]
+    }
+   ],
    "source": [
     "equation_string = '0.3*u + 0.6*udot'\n",
     "u, udot = smp.symbols('u udot')\n",
@@ -58,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +92,7 @@
        "[  l - 1, m + 1]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -89,7 +108,7 @@
        "[    l]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,18 +159,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[l + 1, m - 1, l - 4.1, m, l - 1, m + 1]\n"
+     ]
+    }
+   ],
    "source": [
     "print('[{:s}]'.format(', '.join( [str(a) for a in exp])))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -188,12 +215,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix([[l + 1, m - 1], [l - 4.1, m], [l - 1, m + 1]]) Matrix([[0.3*m], [0.6*m], [l]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(exp, coef)"
+   ]
   },
   {
    "cell_type": "code",
@@ -215,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -239,24 +276,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[y, X1, X2]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X[0] = smp.symbols('y')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +294,7 @@
        "[0, 0, 0]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -373,10 +402,10 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "np.True_"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +436,7 @@
        "4221"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -447,47 +476,11 @@
     "print(y_min, y_mid, y_max)\n",
     "print(y_mid - 0.5*L_y)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
-      ]
-     },
-     "execution_count": 133,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.array(range(10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "my-conda-env",
    "language": "python",
    "name": "python3"
   },
@@ -501,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
